tooling/nargo_cli/tests/snapshots/execution_failure/dynamic_index_zero_sized_member_failure/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Index out of bounds, array has size 4, but index was 10
  ┌─ src/main.nr:9:5
  │
9 │     arr[i].b
  │     ------
  │
  = Call stack:
    1: main
            at src/main.nr:9:5

Failed to solve program: 'Index out of bounds, array has size 4, but index was 10'
